dnl Process this file with autoconf to produce a configure script.
AC_INIT(free.c)
AM_CONFIG_HEADER(config.h)

dnl sets package name and version
AM_INIT_AUTOMAKE(procps,3.0.1)

AC_SUBST(FLASK_LINUX)
AC_ARG_ENABLE(flask,[  --enable-flask  Enable Security-Enhanced Linux features],	AC_DEFINE([FLASK_LINUX],1,[Use Security-Enhanced Linux features]),)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lc:
#AC_CHECK_LIB(c, main)
dnl Replace `main' with a function in -lefence:
#AC_CHECK_LIB(efence, main)
dnl Replace `main' with a function in -lproc:
#AC_CHECK_LIB(proc, main)

dnl Checks for header files.
#AC_HEADER_DIRENT
#AC_HEADER_STDC
#AC_HEADER_SYS_WAIT
#AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_TYPE_UID_T
#AC_C_INLINE
#AC_TYPE_PID_T
#AC_TYPE_SIZE_T
#AC_STRUCT_ST_RDEV
#AC_HEADER_TIME
#AC_STRUCT_TM

dnl Checks for library functions.
#AC_FUNC_GETPGRP
#AC_PROG_GCC_TRADITIONAL
#AC_HEADER_MAJOR
#AC_FUNC_MMAP
#AC_TYPE_SIGNAL
#AC_FUNC_STRFTIME
#AC_FUNC_VPRINTF
#AC_CHECK_FUNCS(gettimeofday regcomp select strcspn strdup strerror strspn strstr strtod strtol strtoul uname)

AC_SUBST(NCURSES_LIB)
AC_CHECK_LIB(ncurses, initscr,NCURSES_LIB="-lncurses",AC_MSG_ERROR(Need ncurses to compile this program))


AC_OUTPUT(Makefile ps/Makefile proc/Makefile)
