
lib_LTLIBRARIES = libproc.la

libproc_la_SOURCES = alloc.c compare.c compare.h devname.c devname.h \
                     ksym.c output.c procps.h pwcache.c readproc.c \
					 readproc.h sig.c sig.h status.c status.h sysinfo.c \
					 sysinfo.h version.c version.h whattime.c \
					 whattime.h

libproc_la_LDFLAGS = -version-info 3:0:0
